# zcode

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  QUICK_TEST.md  README.md  RUN_TEST.sh  SHELL_ALIASES.md  START_HERE.md  TESTING.md  TESTING_SUMMARY.md  rust_out
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  diff.rs  error.rs  events.rs  executor.rs  lib.rs  main.rs  message.rs  model.rs  parsers.rs  session.rs  state.rs
src/components/: chat_panel.rs  command_palette.rs  confirmation.rs  diff_view.rs  header.rs  help.rs  mod.rs  prompt_input.rs  provider_select.rs  sidebar.rs  status_bar.rs
src/file_ops/: apply.rs  backup.rs  mod.rs  reconstruct.rs
src/input/: command_mode.rs  handler.rs  keybindings.rs  keymap.rs  mod.rs  parser.rs
src/input/modes/: confirmation.rs  diff_review.rs  mod.rs  prompt_entry.rs  provider_select.rs
src/neovim/: client.rs  extmarks.rs  highlights.rs  mod.rs
src/providers/: aider.rs  amazon_q.rs  claude.rs  copilot.rs  custom.rs  mod.rs
src/ui/: AGENTS.md  chat_history.rs  colors.rs  components.rs  diff_view.rs  editor.rs  header.rs  help.rs  layout.rs  logo.rs  mod.rs  overlay_diff.rs  prompt_input.rs  renderer.rs  renderers.rs  search.rs  session_turn.rs  sidebar.rs  status_bar.rs  theme.rs
src/ui/widgets/: code_block.rs  diff_hunk.rs  mod.rs  scrollable_list.rs  spinner.rs
