[package]
name = "zcode"
version = "0.1.0"
edition = "2021"
description = "Zellij plugin for AI code assistant integration"
license = "MIT"

# Zellij plugins are binary crates (use main.rs, not lib.rs)
# This ensures the _start export is generated for WASM

[dependencies]
zellij-tile = "0.43.1"
similar = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
unicode-width = "0.1"
textwrap = "0.16"
regex = "1.10"
dirs = "5.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
